# poc-networking-tcp

./: .gitignore  CMakeLists.txt  README.md
libs/NetCommon/: CMakeLists.txt
libs/NetCommon/include/NetCommon/: net_client.hpp  net_common.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp  olc_net.hpp
src/NetClient/: CMakeLists.txt
src/NetClient/src/: MMO_Client.cpp  SimpleClient.cpp
src/NetServer/: CMakeLists.txt
src/NetServer/include/NetServer/: MMO_Common.hpp
src/NetServer/src/: MMO_Server.cpp  SimpleServer.cpp
src/Playground/: CMakeLists.txt
src/Playground/src/: SimpleExample.cpp
